# cmake_minimum_required(VERSION 3.20)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(ouch ouch.c)
add_executable(intquit intquit.c)
add_executable(t_kill t_kill.c)
add_executable(catch_rtsigs catch_rtsigs.c)
add_executable(demo_SIGFPE demo_SIGFPE.c)
add_executable(ignore_pending_sig ignore_pending_sig.c)
add_executable(nonreentrant nonreentrant.c)
add_executable(sig_receiver sig_receiver.c)
add_executable(sig_sender sig_sender.c)
add_executable(sig_speed_sigsuspend sig_speed_sigsuspend.c)
# add_executable(siginterrupt siginterrupt.c)
add_executable(sigmask_longjmp sigmask_longjmp.c)
# add_executable(signal signal.c)
add_executable(signalfd_sigval signalfd_sigval.c)
add_executable(t_sigaltstack t_sigaltstack.c)
add_executable(t_sigqueue t_sigqueue.c)
add_executable(t_sigsuspend t_sigsuspend.c)
add_executable(t_sigwaitinfo t_sigwaitinfo.c)
# add_library(signal_functions SHARED signal_functions.c)
target_link_libraries(nonreentrant crypt)